--- a/bookStore/index.html
+++ b/bookStore/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/bookStore/download.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title class="k" >Kalvium Books</title>
     <!-- <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200&display=swap');
     </style> -->
